fixed overflow hiding H2 custom image for "Beauty" prepared for use of custom font (need to add still)

--- a/src/modules/InfiniteHubStories/NewsroomLogo.module.scss
+++ b/src/modules/InfiniteHubStories/NewsroomLogo.module.scss
@@ -6,7 +6,6 @@
     text-decoration: none;
     color: var(--prezly-text-color);
     border: 1px solid var(--prezly-border-color);
-    overflow: hidden;
     box-shadow: -7px 7px 0px 0px rgba(0, 0, 0, 1);
 
     &:hover img {
@@ -23,8 +22,9 @@
         display: block;
         width: 100%;
         max-width: 100%;
-        height: auto;
-        max-height: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center;
         transition: filter 0.25s ease-in-out;
     }
 }
@@ -39,6 +39,8 @@
     line-height: 140%;
     text-align: center;
     padding: 0;
+    overflow: hidden;
+    min-height: 0;
 }
 
 .title {
